fix zoom control overlapping, satellite not available, increase default zoom level

--- a/src/features/user/ManageProjects/styles/StepForm.module.scss
+++ b/src/features/user/ManageProjects/styles/StepForm.module.scss
@@ -108,7 +108,7 @@
   justify-content: center;
   align-items: center;
   background: #fff;
-  width: 55px;
+  width: 60px;
   height: 30px;
   border-radius: 0 !important;
   cursor: pointer;
