--- a/src/features/user/UserProfile/styles/RegisterModal.module.scss
+++ b/src/features/user/UserProfile/styles/RegisterModal.module.scss
@@ -249,6 +249,7 @@
   position: absolute;
   right: 10px;
   bottom: 20px;
+  z-index: 2;
 }
 
 .contributionInfo {
